--- a/SQLAlchemy.ipynb
+++ b/SQLAlchemy.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## SQL Alchemy"
    ]
@@ -19,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
@@ -31,21 +27,17 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "connection = \"root:asdSA123!@127.0.0.1:3306/movie_db\"\n",
+    "connection = \"root:root@127.0.0.1:3306/movie_db\"\n",
     "engine = create_engine(f'mysql://{connection}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -65,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "movie = pd.read_csv('Resources/movie_new.csv', delimiter = ',', encoding = 'latin-1')\n",
@@ -81,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "movie.to_sql(name = 'movie', con = engine, if_exists = 'append', index = False)\n",
@@ -97,9 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -119,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -199,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -329,9 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -471,9 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -607,9 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -737,9 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
